--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>WYN - Vença seu maior inimigo!</title>
+    <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css">
+    <style media="screen">
+      #cafe-da-manha-wrapper * {
+        display: inline-block;
+      }
+    </style>
   </head>
   <body>
     <img src="WYN.png"/>
     <h2>Vença seu maior inimigo: VOCÊ!</h2>
     <h3>Cardápio da Semana</h3>
-    <h5>CAFÉ DA MANHÃ (9h)</h5> <input type="checkbox" name="" value="">
-    <h5>ALMOÇO (11h30)</h5> <input type="checkbox" name="" value="">
-    <h5>LANCHE DA TARDE 1 (14h30)</h5> <input type="checkbox" name="" value="">
-    <h5>LANCHE DA TARDE 2 (17h30)</h5> <input type="checkbox" name="" value="">
-    <h5>JANTAR (20h)</h5> <input type="checkbox" name="" value="">
-    <h5>CEIA (22h)</h5> <input type="checkbox" name="" value="">
-    <!-- <input type="checkbox" name="select-all"><label for="select-all">Selecionar todos</label> -->
-    <button>Selecionar todos</button>
-    <button>GERAR SELECIONADOS</button>
+    <div id="cafe-da-manha-wrapper">
+      <input type="checkbox" id="cafe"/>
+      <h5>CAFÉ DA MANHÃ (9h)</h5> 
+    </div>
+
+    <h5>ALMOÇO (11h30)</h5> <input type="checkbox" id="almoco"/>
+    <h5>LANCHE DA TARDE 1 (14h30)</h5> <input type="checkbox" id="lanche1"/>
+    <h5>LANCHE DA TARDE 2 (17h30)</h5> <input type="checkbox" id="lanche2"/>
+    <h5>JANTAR (20h)</h5> <input type="checkbox" id="jantar"/>
+    <h5>CEIA (22h)</h5> <input type="checkbox" id="ceia"/>
+    <button id="ST">Selecionar todos</button>
+    <button id="GS">GERAR SELECIONADOS</button>
+    <ul id="refeicoes-geradas">
+
+    </ul>
+    <script src="./buttons.js" charset="utf-8"></script>
   </body>
 </html>
