Criando gerador.js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3>Cardápio da Semana</h3>
     <div id="cafe-da-manha-wrapper">
       <input type="checkbox" id="cafe"/>
-      <h5>CAFÉ DA MANHÃ (9h)</h5> 
+      <h5>CAFÉ DA MANHÃ (9h)</h5>
     </div>
 
     <h5>ALMOÇO (11h30)</h5> <input type="checkbox" id="almoco"/>
@@ -29,6 +29,6 @@
     <ul id="refeicoes-geradas">
 
     </ul>
-    <script src="./buttons.js" charset="utf-8"></script>
+    <script src="./gerador.js" charset="utf-8"></script>
   </body>
 </html>
